[package]
name = "rust-idm"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A high-speed Rust-based download manager for fast file retrieval."

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6.1", features = ["derive"] }

